# myschematic

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
app/commands/: add_component_cmd.cpp  add_component_cmd.h  change_property_cmd.cpp  change_property_cmd.h  delete_element_cmd.cpp  delete_element_cmd.h  mirror_element_cmd.cpp  mirror_element_cmd.h  move_element_cmd.cpp  move_element_cmd.h  rotate_element_cmd.cpp  rotate_element_cmd.h
app/editors/: property_editor.cpp  property_editor.h
app/panels/: component_palette.cpp  component_palette.h
app/tools/: place_tool.cpp  place_tool.h  select_tool.cpp  select_tool.h  tool.cpp  tool.h  tool_manager.cpp  tool_manager.h
app/view/: schematic_scene.cpp  schematic_scene.h  schematic_view.cpp  schematic_view.h
app/view/items/: component_item.cpp  component_item.h  pin_item.cpp  pin_item.h
cmake/: CompilerWarnings.cmake
docs/: development-plan.md  technical-decisions.md  user-guide.md
lib/: CMakeLists.txt
lib/include/myschematic/: builtin_symbols.h  circuit.h  component.h  geometry.h  id_generator.h  library_manager.h  myschematic.h  pin.h  property.h  schematic_element.h  sheet.h  symbol_def.h  symbol_graphic.h  symbol_library.h  symbol_pin.h  types.h
lib/src/model/: circuit.cpp  component.cpp  id_generator.cpp  pin.cpp  property.cpp  schematic_element.cpp  sheet.cpp
lib/src/symbol/: builtin_symbols.cpp  library_manager.cpp  symbol_def.cpp  symbol_library.cpp
tests/: CMakeLists.txt
tests/test_commands/: test_add_delete_cmd.cpp  test_move_cmd.cpp
tests/test_model/: test_circuit.cpp  test_component.cpp  test_sheet.cpp
tests/test_symbol/: test_builtin_symbols.cpp  test_component_extended.cpp  test_library.cpp  test_symbol_def.cpp
